# visualea

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: conda-package-build.yml
conda/: environment.yml  meta.yaml
doc/: conf.py  environment.yml
src/openalea/visualea/: dialogs.py  mainwindow.py  metainfo.py  version.py
src/openalea/visualea/qt/: designer.py
